hermes_fuzz_executed_few_shot_v2/fuzz_72_execution
'use strict';
let x = async (cb) => {
    cb(1, 2);
};


Execution Output ------------------:
test.js:2:9: error: async functions are unsupported
let x = async (cb) => {
        ^~~~~~~~~~~~~~~
Emitted 1 errors. exiting.
